force-app/main/default/objects/SBQQ__Subscription__c/fields/AutoClosedInfo__c.field-meta.xml
<CustomField>
    <fullName>AutoClosedInfo__c</fullName>
    <label>Auto Closed Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DN</fullName>
                <label>Reel not cleared</label>
            </value>
            <value>
                <fullName>PB</fullName>
                <label>Prepay Block</label>
            </value>
            <value>
                <fullName>Y1</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Y2</fullName>
                <label>Closed for Orders</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>