force-app/main/default/objects/SBQQ__Subscription__c/fields/MD_SAPItemNumber__c.field-meta.xml
<CustomField>
    <fullName>MD_SAPItemNumber__c</fullName>
    <label>SAP Item Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>