force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_Allocation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Allocation__c</fullName>
    <label>Allocation</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>