force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_Commission__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Commission__c</fullName>
    <description>This field is created to check commission&apos;s value. To support field values being copied over to QLI at the time of Amendment</description>
    <label>Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>