force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_CommissionCurrency__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CommissionCurrency__c</fullName>
    <label>Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>