force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_ContractType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractType__c</fullName>
    <description>Twin Field to copy over QLI data</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>FPD</fullName>
            </value>
            <value>
                <fullName>Priced</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
                <isActive>false</isActive>
                <label>Annual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>