force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_CostAdjustment__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CostAdjustment__c</fullName>
    <label>Cost Adjustment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>