force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_DeliveryStartDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryStartDate__c</fullName>
    <description>To support field values being copied at the time of Amendment</description>
    <label>Delivery Start Date</label>
    <type>Date</type>
</CustomField>