force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_EstFreightPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_EstFreightPrice__c</fullName>
    <description>This field is created to check the estimated freight value. To Support Fields value being copied over to QLIs in Amendment Scenario</description>
    <label>Estimate Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>