force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_ExistingInventory__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExistingInventory__c</fullName>
    <label>Existing Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>