force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_ExpeditionPoint__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExpeditionPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Point</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Subscriptions (Shipping Point)</relationshipLabel>
    <relationshipName>Subscriptions1</relationshipName>
    <type>Lookup</type>
</CustomField>