force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_ExspaceIndicator__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExspaceIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusive Space</label>
    <type>Checkbox</type>
</CustomField>