force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_FreightMonth__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FreightMonth__c</fullName>
    <label>Freight Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_FreightMonth</valueSetName>
    </valueSet>
</CustomField>