force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_frontendIncoterms2__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_frontendIncoterms2__c</fullName>
    <label>Incoterms2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>