force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_HarvestPeriod__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_HarvestPeriod__c</fullName>
    <label>Harvest Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_HarvestPeriod</valueSetName>
    </valueSet>
</CustomField>