force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_Incoterms1__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Incoterms1__c</fullName>
    <description>This field is created to check incoterms data.</description>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_Incoterms1</valueSetName>
    </valueSet>
</CustomField>