force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_InForecast__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_InForecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Forecast</label>
    <type>Checkbox</type>
</CustomField>