force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_InSalesProgram__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_InSalesProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Sales Program</label>
    <type>Checkbox</type>
</CustomField>