force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_InterestPeriod__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_InterestPeriod__c</fullName>
    <label>Days to customer Instalment Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>