force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_LatestSubscription__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LatestSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of XYZ. This will store the value of the latest / newest subscription record created from its current version.</description>
    <label>Latest Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Subscriptions (Latest Subscription)</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>