force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_LegacySubscriptionID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LegacySubscriptionID__c</fullName>
    <label>Legacy Subscription ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>