force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_LinePONumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LinePONumber__c</fullName>
    <label>Customer Purchase Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>