force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_MarginAdjustment__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_MarginAdjustment__c</fullName>
    <label>Margin Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>