force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_ModeofTransportation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ModeofTransportation__c</fullName>
    <description>This field is created to check the mode of transportation.</description>
    <label>MoT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_MoT</valueSetName>
    </valueSet>
</CustomField>