force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_MosaicOptiontoShip__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_MosaicOptiontoShip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mosaic Option to Ship</label>
    <type>Checkbox</type>
</CustomField>