force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PaymentDate__c</fullName>
    <description>This field is created to check Payment date</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>