force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PaymentTerms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>