force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_PriceBookValue__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceBookValue__c</fullName>
    <label>Price Book Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_PriceBookValue</valueSetName>
    </valueSet>
</CustomField>