force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_PriceDueDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceDueDate__c</fullName>
    <label>Price Due Date</label>
    <type>Date</type>
</CustomField>