force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_QuoteLineSelfId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteLineSelfId__c</fullName>
    <label>Quote Line Self Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>