force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_ReplacementMargin__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ReplacementMargin__c</fullName>
    <label>Replacement Margin (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>