force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_ShippingType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShippingType__c</fullName>
    <label>Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_ShippingType</valueSetName>
    </valueSet>
</CustomField>