force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created to check the shipping address value</description>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriptions (Ship To)</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>