force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_SoldToShipToJunction__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SoldToShipToJunction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>PMC_SS_AccountPartnerRelationships__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>