force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_SubscriptionNumberIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SubscriptionNumberIdentifier__c</fullName>
    <description>This field will store the Subscription number(AutoNumber) which will be used as an External Id for 066I.</description>
    <externalId>true</externalId>
    <label>Subscription Number Identifier</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>