force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Tolerance__c</fullName>
    <label>Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+/- 10% Buyers Option</fullName>
            </value>
            <value>
                <fullName>+/- 10% Shippers Option</fullName>
            </value>
            <value>
                <fullName>+/- 5% Buyers Option</fullName>
            </value>
            <value>
                <fullName>+/- 5% Shippers Option</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>