force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_TotalAvailableQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TotalAvailableQuantity__c</fullName>
    <description>This field will store the value corresponding to the quantities available to order for a line item</description>
    <label>Total Available Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>