force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_TotalOrderedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TotalOrderedQuantity__c</fullName>
    <description>This field will store the  summation of quantities of the several order lines created for a particular line item.</description>
    <label>Total Ordered Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>