force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_ValidStartDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ValidStartDate__c</fullName>
    <label>Delivery Window Start Date</label>
    <type>Date</type>
</CustomField>