force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_VCODeliveryRegion__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_VCODeliveryRegion__c</fullName>
    <label>Delivery Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_DeliveryRegion</valueSetName>
    </valueSet>
</CustomField>