force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_CPQ_VCOIntercompanyPlant__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_VCOIntercompanyPlant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VCO Intercompany Plant</label>
    <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
    <relationshipLabel>Subscriptions (VCO Intercompany Plant)</relationshipLabel>
    <relationshipName>Intercompany_VCO</relationshipName>
    <type>Lookup</type>
</CustomField>