force-app/main/default/objects/SBQQ__Subscription__c/fields/PMC_SS_QuantityAccountsUoM__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_QuantityAccountsUoM__c</fullName>
    <description>Field to specify the quantity in account&apos;s UOM</description>
    <formula>IF(  AND( 
         OR( SBQQ__Contract__r.Account.PMC_SS_UnitofMeasure__r.Name =  &apos;STN&apos; , 
             SBQQ__Contract__r.Account.PMC_SS_UnitofMeasure__r.Name =  &apos;MTN&apos; ), 
             TEXT(PMC_CPQ_UnitofMeasure__c)  ==  SBQQ__Contract__r.Account.PMC_SS_UnitofMeasure__r.Name), 
             SBQQ__Quantity__c  , 
             IF( AND(TEXT(PMC_CPQ_UnitofMeasure__c) = &apos;MTN&apos;, SBQQ__Contract__r.Account.PMC_SS_UnitofMeasure__r.Name = &apos;STN&apos; ), 
                 SBQQ__Quantity__c  *  $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.MTNtoSTN.PMC_SS_ConversionFactor__c, 
                 IF( AND(TEXT(PMC_CPQ_UnitofMeasure__c) = &apos;STN&apos;, SBQQ__Contract__r.Account.PMC_SS_UnitofMeasure__r.Name = &apos;MTN&apos; ), 
                     SBQQ__Quantity__c * $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.STNtoMTN.PMC_SS_ConversionFactor__c , 
                     0) ) )</formula>
    <label>Quantity (Account’s UoM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>